# dwarvish

./: .gitignore  Makefile.am  application.ui  attrtree.c  attrtree.h  configure.ac  die.ui  dietree.c  dietree.h  dwstring.c  dwstring.h  loaddwfl.c  loaddwfl.h  main.c  session.h  util.h
scripts/: known-dwarf.awk
src/: attrtree.c  attrtree.h  dietree.c  dietree.h  dwstring.h  loaddwfl.c  main.c  session.h
ui/: application.ui  die.ui  dwarvish.gresource.xml
